--- a/src/Pressure.html
+++ b/src/Pressure.html
@@ -28,7 +28,7 @@
 
 const title = "Pressure in Back Room (MS8607)";
 const xlabel = "Date";
-const ylabel = "Pressure (%)";
+const ylabel = "Pressure (hPa)";
 //-----------------------------SVG------------------------------// 
 // const width = 960;
 // const height = 500;
