--- a/src/MS8607_sensors.html
+++ b/src/MS8607_sensors.html
@@ -7,7 +7,6 @@
 <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 	
 	</head>
-	
 <body>
 	<header> 
 <img src="../images/favicon.ico" alt="StratOhio Logo" ALIGN="left" VSPACE="15" HSPACE="15">
@@ -56,7 +55,7 @@
 	</p>
 	
 	<p></p>
-	<iframe src="Pressure.html" style="width:100%; height:600px; border:none;" title="Temperature data" 
+	<iframe src="Pressure.html" style="width:100%; height:600px; border:none;" title="Pressure data" 
 	alt="Sensor Pressure data from SPi-Sensors">
 	</iframe>
 	
@@ -67,17 +66,38 @@
 	</p>
 	
 	<p></p>
-	<iframe src="Humidity.html" style="width:100%; height:600px; border:none;" title="Temperature data" 
+	<iframe src="Humidity.html" style="width:100%; height:600px; border:none;" title="Humidity data" 
 	alt="Sensor Humidity data from SPi-Sensors">
 	</iframe>
 	
 	</section>
+	<section>
+	<p>MS8607 Dew Point Calculation </a>
+	</p>
 	
+	<p></p>
+	<iframe src="DewPoint.html" style="width:100%; height:600px; border:none;" title="Dew Point" 
+	alt="Dew Point Calculation from SPi-Sensors">
+	</iframe>
+	
+	</section>
+	
+		<section>
+	<p>Cleveland, OH from about 70kft over Manfield, OH 
+	taken from one of the early Explorer post flights.</p>
+<center>	<img src="../images/cle0339.jpg" alt="Cleveland from over Mansfield" 
+		width="50%" > </center>
+	</section>	
 	
 	
 	
 	<footer> 
-		
+		<p> &copy; 2021 David B. Snyder </p>
+	
+		<p> this is the footer </p>
+		<ul>
+			<li><a href="../index.html">SPi-sensors</a> </li>
+		</ul>
 	</footer>
 	
 	</body>
